[gd_scene load_steps=2 format=3 uid="uid://dysayd3qosfl2"]

[ext_resource type="Script" path="res://scripts/combat_manager.gd" id="1_mvstt"]

[node name="CombatManager" type="Node2D"]
script = ExtResource("1_mvstt")

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="TurnTimer" to="." method="turn_pass"]
